# tauri-stats-windows-defender

./: .gitignore  README.md  build.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
