[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.11", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const-random = "0.1.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
